grid system and flexbox done

--- a/HTML/class01.html
+++ b/HTML/class01.html
@@ -5,11 +5,15 @@
 <h5>Five</h5>
 <h6>Six</h6>
 
-<h1></h1>
 
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem eos repellendus hic distinctio voluptate
-    praesentium minus itaque reprehenderit. Vel ea voluptate officiis impedit, necessitatibus quaerat sequi culpa
-    quibusdam odit porro!</p>
+
+
+
+
+
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam deserunt similique reiciendis, impedit dicta facilis
+    blanditiis et iure illum omnis fugit natus qui aperiam veritatis reprehenderit atque culpa officiis sunt?</p>
 
 <!-- unorder list  -->
 
@@ -41,4 +45,4 @@
 <u>Lorem ipsum dolor sit amet consectetur adipisicing.</u>
 
 
-<!-- github.com/techtornix/webmobile --> 
+<!-- github.com/techtornix/webmobile -->
