js complete for web mobile

--- a/CSS/class5/mediaquery.html
+++ b/CSS/class5/mediaquery.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="clipPath.css">
-    <title>ClipPath</title>
+    <link rel="stylesheet" href="mediquery.css">
+    <title>MediaQuery</title>
 </head>
+
 <body>
+
     <div class="parent">
-        <div class="box"></div>
+        <div class="box box1"></div>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
+
     </div>
+
 </body>
+
 </html>
